# memory-opensource

./: .env.example  .gitignore  AUTO_SCHEMA_REGISTRATION.md  COMPRESS_ENDPOINT_GUIDE.md  CONTRIBUTING.md  Dockerfile  ENHANCED_SUMMARIES_IMPLEMENTATION.md  QUICKSTART_OPENSOURCE.md  README.md  SECURITY.md  TESTING.md  agent.md  app_factory.py  docker-compose.yaml  main.py  monitor_batch_processing.sh  openapi-stainless.json  openapi.json  openapi.stainless.yml  openapi.yaml  openapi_with_schemas.json  parse-server-config.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_neo4j.sh  start_all_services.py  start_all_services.sh  start_all_workers.py  start_document_worker.py  start_temporal_worker.py  start_worker.py  test_memory.json  version.py
api_handlers/: chat_gpt_completion.py  stable_diffusion.py
background_tasks/: pdf_processing.py
config/: __init__.py  base.yaml  features.py  opensource.yaml
connectors/: slack-export-2.yml  slack-webhook-router-export-2.yml
core/: __init__.py
datastore/: neo4jconnection.py
docs/: EMBEDDING_MODELS.md  FIX_ORG_NAMESPACE_QDRANT.md  LOCAL_EMBEDDINGS.md  ORGANIZATION_PLAN.md  ORGANIZATION_SUMMARY 2.md  QDRANT_COLLECTION_FIX.md  RUNNING_TESTS.md  SEARCH_LATENCY_ANALYSIS.md  TELEMETRY.md  TESTING_SOLUTION.md  TEST_USER_CREDENTIALS.md
examples/: webhook_example.py
memory/: diagnose_processing_status.py  memory_graph.py  memory_item.py  memory_item_relevance.py
models/: acl.py  active_node_rel.py  cipher_ast.py  embedding_model.py  feedback_models.py  hierarchical_models.py  interaction_models.py  manufacturing_schema_models.py  memory_models.py  message_models.py  neo_path.py  omo.py  operation_types.py  parse_server.py  shared_types.py  structured_outputs.py  temporal_models.py  user_models.py  user_schemas.py
routes/: __init__.py  memory_routes.py
scripts/: AddMemoryTokenCount.json  README.md  find_duplicates 2.py  organize_docs_and_scripts 2.sh  organize_files 2.py  remove_cloud_dirs.sh  remove_duplicates.py  run_tests_docker.sh  storageCountWorkspaceFollowers.json  update_zshrc.sh
services/: active_node_rel_service.py  api_operation_tracker.py  auth_utils.py  azure_webhook_consumer.py  batch_processor.py  cache_utils.py  connector_service.py  context_utils.py  default_schema_initializer.py  edge_constraint_resolver.py  error_handlers.py  jwt_service.py  link_to_parser.py  llm_schema_selector.py  logger_singleton.py  logging_config.py  memory_management.py  memory_management.py.bak  memory_policy_resolver.py  memory_service.py  message_analysis.py  message_batch_analysis.py  message_processing_pipeline.py  message_service.py  mongo_client.py  multi_tenant_utils.py  node_constraint_resolver.py  omo_safety.py  optimized_schema_auth.py  processPDF.py  property_indexing_service.py  query_log_service.py  schema_service.py  stripe_service.py  token_utils.py  url_utils.py  user_utils.py  utils.py  webhook_service.py  workspace_utils.py
tests/: DELETE_ALL_MEMORIES_TESTS.md  PROVIDER_TESTING_GUIDE.md  README.md  README_GRAPHQL_TESTS.md  (+88 more)
(+293 files in other folders)
